fix : link 가져올 때 발생하는 N+1 문제 해결